--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
   fast_finish: true
 notifications:
   email: false
+cache: bundler
 bundler_args: --path vendor/bundle --without test --jobs=3 --retry=3
 services:
   - memcached
